[package]
name = "wasact"
version = "0.1.0"
authors = ["Q 🦄 <q@magicalcodewit.ch>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.4", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window', 'EventTarget', 'Text'] }
wasact-macro = { path = "../wasact-macro" }
proc-macro-hack = "0.5"